Figure out visibility sensor; Reveal effect pictures; Fix info stick top

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,4 +3,5 @@
   background: #cd8189;
   padding: 20px;
   color: white;
+  position: relative;
 }
