--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,92 +1,94 @@
 .header {
-    height: 164px;
+  height: 164px;
 }
 
 .headerContent {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    height: 80px;
-    position: relative;
-    top: 0;
-    width: 100%;
-    align-items: center;
-    transition: background-color 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
-        height 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) 0s,
-        padding 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) 0s;
-    a {
-        padding: 10px;
-        color: #9d9da1;
-    }
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  height: 80px;
+  position: relative;
+  top: 0;
+  width: 100%;
+  align-items: center;
+  transition: background-color 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
+    height 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) 0s, padding 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) 0s;
+  a {
+    padding: 10px;
+    color: #9d9da1;
+  }
 }
 
 .menu {
-    bottom: 0;
-    flex-grow: 1;
-    left: 0;
-    padding: 0 10px;
-    width: 100%;
-    z-index: 1;
-    border-top: none;
-    background: transparent;
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-    transition: none;
+  bottom: 0;
+  flex-grow: 1;
+  left: 0;
+  padding: 0 10px;
+  width: 100%;
+  z-index: 1;
+  border-top: none;
+  background: transparent;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  transition: none;
 
-    .menuLink {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        position: relative;        
-    }
+  .menuLink {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
 }
 
-
 .headerContent.fixed {
-    padding: 0;
-    height: 80px;
-    background-color: #e6bfbcf2;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
+  padding: 0;
+  height: 80px;
+  background-color: #e6bfbcf2;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 
-    a, h1 {
-        color: white;
-        transition: all 0.5s;
-    }
+  a,
+  h1 {
+    color: white;
+    transition: all 0.5s;
+  }
 
-    svg {
-        color: white;
-        transition: all 0.5s;
-    }
+  svg {
+    color: white;
+    transition: all 0.5s;
+  }
+
+  .logoContainer h1 {
+    font-size: 2.2em;
+    transition: font-size 0.5s ease-in-out;
+  }
 }
 
 .logoContainer {
-    position: absolute;
-    margin-top: 10px;
-    z-index: 2;
+  position: absolute;
+  margin-top: 10px;
+  z-index: 2;
 
-    h1 {
-        color: #6f7171;
-        font-family: $font-header;
-    }
+  h1 {
+    color: #6f7171;
+    font-family: $font-header;
+  }
 }
 
-
-
 .sensor {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
-    left: 0;
-    right: 0;
-    height: 1px;
-    top: 20px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  height: 1px;
+  top: 20px;
 }
