--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -122,3 +122,7 @@ hr.divider {
   margin: 0;
   width: 100%;
 }
+
+.ant-row-flex-stretch {
+  align-items: stretch;
+}
